# VideoLingo_50FIX

./: OneKeyStart.bat  config.yaml  fix_cudnn.py  fix_env.py  fix_whisperx.py  install.py  pyproject.toml  st.py  uv_start.bat
batch/: OneKeyBatch.bat
core/: _3_2_split_meaning.py  _4_2_translate.py  _5_split_sub.py  _6_gen_sub.py  prompts.py  translate_lines.py
core/asr_backend/: demucs_vl.py  whisperX_local.py
core/spacy_utils/: load_nlp_model.py
core/st_utils/: download_video_section.py  imports_and_utils.py
core/utils/: ask_gpt.py
