[project]
name = "videolingo"
version = "2.0.0"
description = "VideoLingo with RTX 50 Series Support"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    # --- 核心深度学习框架 (RTX 50 fix) ---
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision",
    
    # --- 核心依赖限制 ---
    "numpy==1.26.4",
    "spacy==3.7.4",
    
    # --- 修复 ONNX Runtime ---
    "onnxruntime==1.19.2",

    # --- 之前冲突的包 ---
    "demucs @ git+https://github.com/adefossez/demucs",
    "whisperx @ git+https://github.com/m-bain/whisperx.git@7307306a9d8dd0d261e588cc933322454f853853",

    # --- 其他常规依赖 ---
    "librosa==0.10.2.post1",
    "pytorch-lightning==2.3.3",
    "lightning==2.3.3",
    "transformers==4.39.3",
    "moviepy==1.0.3",
    "openai==1.55.3",
    "opencv-python==4.10.0.84",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pydub==0.25.1",
    "PyYAML==6.0.2",
    "replicate==0.33.0",
    "requests==2.32.3",
    "resampy==0.4.3",
    "streamlit==1.38.0",
    "yt-dlp",
    "json-repair",
    "ruamel.yaml",
    "InquirerPy",
    "autocorrect-py",
    "ctranslate2==4.4.0",
    "edge-tts",
    "syllables",
    "pypinyin",
    "g2p-en",
    "xmltodict",
]

[tool.uv]
# 允许跨源寻找最佳版本 (解决 openai 依赖问题)
index-strategy = "unsafe-best-match"

# 核心魔法：强制覆盖依赖版本 (解决编译报错的终极方案)
override-dependencies = [
    # 1. 锁定 PyTorch 以支持 RTX 50
    "torch==2.6.0",
    "torchaudio==2.6.0",
    
    # 2. 锁定 Numpy 以兼容旧版库
    "numpy==1.26.4",
    
    # 3. 锁定 ONNX 以获得 Windows 支持
    "onnxruntime==1.19.2",
    
    # 4. 【关键】强制使用有预编译包的新版 av，跳过编译步骤
    "av==13.1.0",
    
    # 5. 【配合】升级 faster-whisper 以兼容新版 av
    "faster-whisper==1.1.0"
]

# 配置 Nightly 源下载 RTX 50 支持包
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = false