[project]
name = "videolingo"
version = "2.0.0"
description = "VideoLingo with RTX 50 Series Support"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    # --- 基础工具 ---
    "pip",
    "matplotlib",  # [新增] 修复 pyannote.audio 缺包报错
    
    # --- 核心深度学习框架 (RTX 50 fix) ---
    "torch>=2.6.0.dev",
    "torchaudio>=2.6.0.dev",
    "torchvision>=0.21.0.dev",
    
    # --- 核心依赖限制 ---
    "numpy==1.26.4",
    "spacy==3.7.4",
    
    # [新增] 强行指定 Spacy 中文模型下载地址，解决 404 问题
    "zh_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.7.0/zh_core_web_sm-3.7.0-py3-none-any.whl",
    
    # --- 修复 ONNX Runtime ---
    "onnxruntime==1.19.2",

    # --- 修复 GPU 检测 ---
    "nvidia-ml-py",

    # --- 之前冲突的包 ---
    "demucs @ git+https://github.com/adefossez/demucs",
    "whisperx @ git+https://github.com/m-bain/whisperx.git@7307306a9d8dd0d261e588cc933322454f853853",

    # --- 其他常规依赖 ---
    "librosa==0.10.2.post1",
    "pytorch-lightning==2.3.3",
    "lightning==2.3.3",
    "transformers==4.39.3",
    "moviepy==1.0.3",
    "openai==1.55.3",
    "opencv-python==4.10.0.84",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pydub==0.25.1",
    "PyYAML==6.0.2",
    "replicate==0.33.0",
    "requests==2.32.3",
    "resampy==0.4.3",
    "streamlit==1.38.0",
    "yt-dlp",
    "json-repair",
    "ruamel.yaml",
    "InquirerPy",
    "autocorrect-py",
    "ctranslate2==4.4.0",
    "edge-tts",
    "syllables",
    "pypinyin",
    "g2p-en",
    "xmltodict",
]

[tool.uv]
index-strategy = "unsafe-best-match"

# 核心魔法：强制覆盖依赖版本
override-dependencies = [
    "torch>=2.6.0.dev",
    "torchaudio>=2.6.0.dev",
    "numpy==1.26.4",
    "onnxruntime==1.19.2",
    "av==13.1.0",
    "faster-whisper==1.1.0"
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = false